--- a/css/contacto.css
+++ b/css/contacto.css
@@ -58,6 +58,7 @@
     width: 100%;
     height: 4rem;
     margin-left: 40px;
+    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.3);
   }
 
   main {
@@ -188,11 +189,43 @@
   }
   
   @media (max-width: 700px){
+    body main footer{
+      width: 100%;
+      flex-direction: column;
+    }
+    .datos{
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .logo{
+      width: 100%;
+    }
+    .logo1{
+     display: none;
+    }
+  /* Footer */
+footer{
+  /* width: max-content; */
+  justify-content: center;
+}
+.LG{
+  /* width: 100%; */
+  padding: 5px;
+  justify-content: center;
+}
+.img{
+  width: 50%;
+  padding: 5px;
+}
+.containerfooter{
+  /* width: 100%; */
+  justify-content: center;
+}
     .inte ul{
       flex-direction: column;
     }
     .inte ul li{
-      width: 100%;
+      /* width: 100%; */
       text-align: center;
       margin: 10px;
     }
