--- a/css/productos.css
+++ b/css/productos.css
@@ -9,6 +9,51 @@
     margin: 0;
     padding: 0;
   }
+  #menu-hamburguesa {
+    
+    background-color: #333;
+    width: 100%;
+    text-align: center;
+  }
+  #menu-hamburguesa ul li {
+    padding: 15px 0;
+  }
+  #menu-hamburguesa ul li a {
+    color: #fff;
+    font-size: 18px;
+    font-family: sans-serif;
+  }
+  #boton-hamburguesa {
+    display: none;
+    background-color: #333;
+    color: #fff;
+    font-size: 24px;
+    font-family: sans-serif;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+  }
+
+  /* Transición suave al desplegar el menú */
+#menu-hamburguesa {
+  /* ...otros estilos... */
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+#menu-hamburguesa.mostrando {
+  max-height: 500px; /* Ajustar este valor según la altura máxima del menú */
+}
+
+/* Cambio de color al pasar el cursor sobre los enlaces del menú */
+#menu-hamburguesa ul li a:hover {
+  color: #ff9800;
+}
+
+/* Rotar el icono de la hamburguesa al abrir el menú */
+#boton-hamburguesa span.rotar {
+  transform: rotate(90deg);
+}
 
   nav {
     position: fixed;
@@ -58,6 +103,7 @@
     width: 100%;
     height: 4rem;
     margin-left: 40px;
+    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.3);
   }
 
   main {
@@ -191,11 +237,49 @@
   }
   
   @media (max-width: 700px){
+    nav ul{
+      display: none;
+    }
+    .logo1{
+      display: none;
+    }
+    #boton-hamburguesa {
+      display: block;
+      background-color: #333;
+      color: #fff;
+      font-size: 24px;
+      font-family: sans-serif;
+      padding: 10px;
+      border: none;
+      cursor: pointer;
+    }
+    .productos{
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    /* Footer */
+footer{
+  /* width: max-content; */
+  justify-content: center;
+}
+.LG{
+  /* width: 100%; */
+  padding: 5px;
+  justify-content: center;
+}
+.img{
+  width: 50%;
+  padding: 5px;
+}
+.containerfooter{
+  /* width: 100%; */
+  justify-content: center;
+}
     .inte ul{
       flex-direction: column;
     }
     .inte ul li{
-      width: 100%;
+      /* width: 100%; */
       text-align: center;
       margin: 10px;
     }
